# B4Lecture-2026

./: LICENSE  README.md  TIPS.md
ex1/y_arakawa/: ex1-1.py  ex1-2.py  main.py  pyproject.toml
ex3/y_arakawa/: main.py  memo.md  pyproject.toml
ex5/j_to/: .gitignore  cnn.py  draw_diagramme.py  evaluate.py  fan.py  main.py  mel.py  pyproject.toml
ex5/j_yogo/: .gitignore  audio_processor.py  dataset.py  evaluate.py  final_eval.py  flow_model.py  infer.py  pyproject.toml  train.py
ex5/j_yogo/conf/: config.yaml
ex5/j_yogo/conf/model/: flow.yaml  flow_large.yaml
ex5/j_yogo/conf/train/: default.yaml  large.yaml
ex5/y_arakawa/: .gitignore  README.md  main.py  note.md  pyproject.toml
ex5/y_arakawa/configs/: config.yaml  config_classifier.yaml  config_optuna.yaml  config_optuna_for_comp.yaml
ex5/y_arakawa/jobs/: run_train.sh  run_train_optuna.sh
ex5/y_arakawa/logs/mel_ae/: multirun.yaml
ex5/y_arakawa/logs/mel_ae/hidden16/.hydra/: config.yaml  hydra.yaml  overrides.yaml
ex5/y_arakawa/logs/mel_ae/hidden16/ckpts/: model_epoch_0000.pt  model_epoch_0003.pt  model_epoch_0006.pt  model_epoch_0009.pt
ex5/y_arakawa/logs/mel_ae/hidden16/tensorboard_logs/: events.out.tfevents.1779781371.arakawa26.40965.1
ex5/y_arakawa/logs/mel_ae/hidden32/.hydra/: config.yaml  hydra.yaml  overrides.yaml
ex5/y_arakawa/logs/mel_ae/hidden32/ckpts/: model_epoch_0000.pt  model_epoch_0003.pt  model_epoch_0006.pt  model_epoch_0009.pt
ex5/y_arakawa/logs/mel_ae/hidden32/tensorboard_logs/: events.out.tfevents.1779781384.arakawa26.40965.2
ex5/y_arakawa/logs/mel_ae/hidden8/.hydra/: config.yaml  hydra.yaml  overrides.yaml
ex5/y_arakawa/logs/mel_ae/hidden8/ckpts/: model_epoch_0000.pt  model_epoch_0003.pt  model_epoch_0006.pt  model_epoch_0009.pt
ex5/y_arakawa/logs/mel_ae/hidden8/tensorboard_logs/: events.out.tfevents.1779781353.arakawa26.40965.0
ex5/y_arakawa/logs/mel_ae_optuna2/: optimization_results.yaml
ex5/y_arakawa/logs/mel_ae_optuna2/hidden11_lr0.0002/.hydra/: config.yaml  (+2 more)
ex5/y_arakawa/logs/mel_ae_optuna_for_comp/: optimization_results.yaml
ex5/y_arakawa/outputs/debug_thresholds/: debug_thresholds.csv
ex5/y_arakawa/outputs/eval_classifier/: test_predictions.csv
ex5/y_arakawa/outputs/eval_classifier/competition/: eval_predictions.csv  eval_summary.txt
ex5/y_arakawa/src/: check_ae.py  competition.py  debug_thresholds.py  determine_threshold.py  eval_classifier.py  make_plot.py  train.py  train_classifier.py  train_optuna.py  visualize_examples.py
ex5/y_arakawa/src/dataloaders/: dataloader.py  eval.txt  make_data_list.py  make_normal_and_anomaly_data_list.py  normal_and_anomaly_data_eval.txt  normal_and_anomaly_data_test.txt  normal_and_anomaly_data_train.txt  test.txt  train.txt
ex5/y_arakawa/src/models/: autoencoder.py  mlp_classifier.py
ex5/y_arakawa/src/utils/: seed.py  visualize.py
ex5/y_arakawa/tensorboard_logs/: events.out.tfevents.1780262549.arakawa26.3083128.0
ex5/y_arakawa/tensorboard_logs/test_smoke/: events.out.tfevents.1780259199.arakawa26.3049253.0
ex5/y_arakawa/tensorboard_logs_classifier/: events.out.tfevents.1780277867.arakawa26.3220735.0  events.out.tfevents.1780278841.arakawa26.3228384.0  events.out.tfevents.1780280282.arakawa26.3241198.0
ex5/y_arakawa/tensorboard_logs_classifier/train/: events.out.tfevents.1780288010.arakawa26.3302245.0
ex5/y_arakawa/tensorboard_logs_classifier/val/: events.out.tfevents.1780288010.arakawa26.3302245.1
ex6/: .gitignore  README.md  data_loader.py  evaluate.py  main.py  note.md  plot_epoch_comparison.py  plot_lr_schedule.py  pr_draft.md  pyproject.toml  requirements.txt  test_implementation.py  training_utils.py  transformer_answer.py  transformer_skeleton.py
ex6/data/: shakespeare.txt
ex6/data/wikitext-2/: train.txt  valid.txt
ex6/f_hagiwara/: evaluate.py  main.py  training_utils.py  transformer_coded.py
ex7/: .gitignore  README.md  VAE_answer.py  VAE_skeleton.py  images.md  main.py  pyproject.toml  requirements.txt  test_implementation.py
ex7/VAEs/: VAE_skeleton.py
ex7/f_hagiwara/: VAE_coded.py  main.py
ex7/libs/: Visualize.py
ex8/: .gitignore  README.md  diffusion_answer.py  diffusion_skeleton.py  main.py  pyproject.toml  requirements.txt  test_implementation.py
ex8/conf/: default.yaml
ex8/f_hagiwara/: diffusion_coded.py  main.py  pyproject.toml  requirements.txt  run.sh
ex8/f_hagiwara/conf/: default.yaml
ex9/: .gitignore  README.md  pyproject.toml
ex9/artifacts/speech/: architecture.drawio
ex9/configs/speech/: data.yaml  features.yaml  model.yaml  sample.yaml  train.yaml
ex9/configs/toy/: data.yaml  model.yaml  sample.yaml  train.yaml
ex9/scripts/: extract_speech_features.py  plot_speech.py  plot_toy.py  prepare_speech_data.py  run_speech.sh  run_toy.sh  sample_speech.py  sample_toy.py  train_speech.py  train_toy.py
ex9/src/nf_assignment/: __init__.py
ex9/src/nf_assignment/flows/: __init__.py  coupling.py  distributions.py  flow.py  normalization.py  permutation.py  transforms.py
ex9/src/nf_assignment/networks/: __init__.py  adapters.py  conv1d.py  mlp.py  wavenet.py
ex9/src/nf_assignment/speech/: __init__.py  conditions.py  data.py  dataset.py  extract_features.py  model.py  normalization.py  prepare_data.py  sample.py  train.py  visualize.py
ex9/src/nf_assignment/speech/features/: __init__.py  alignment.py  content.py  world.py
ex9/src/nf_assignment/toy/: __init__.py  data.py  model.py  sample.py  train.py  visualize.py
ex9/src/nf_assignment/training/: __init__.py  checkpoints.py  loops.py
ex9/src/nf_assignment/utils/: io.py  seed.py
ex9/tests/: __init__.py  test_imports.py  test_runtime_boundaries.py
ex9/tests/flows/: __init__.py  test_bijection.py  test_logdet.py
ex9/tests/networks/: __init__.py  test_conditioners.py
ex9/tests/reference/: __init__.py  test_glowtts_diff.py  test_normflows_diff.py
ex9/tests/speech/: __init__.py  test_conditions.py  test_data.py  test_dataset.py  test_features.py  test_flow_shapes.py  test_training_smoke.py  test_visualize.py
ex9/tests/toy/: __init__.py  test_data.py  test_training_smoke.py  test_visualize.py
(+465 files in other folders)
