[project]
name = "ex6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "sacrebleu>=2.0.0",
    "seaborn>=0.11.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
]
