[project]
name = "ex6"
version = "0.1.0"
description = "Ex6 Translation Transformer"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "datasets>=2.0.0",
    "sacrebleu>=2.0.0",
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "torchvision>=0.27.1",
    "pillow>=9.0.0",
]
