[project]
name = "ex8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "hydra-core>=1.3.4",
    "matplotlib>=3.9.4",
    "omegaconf>=2.3.1",
    "tensorboard>=2.21.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
