[project]
name = "arakawayusuke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "beartype>=0.22.9",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "imageio>=2.37.3",
    "isort>=8.0.1",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyqt5>=5.15.11",
]
