[project]
name = "j-yogo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "optuna>=4.8.0",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
]
