[project]
name = "arakawayusuke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "isort>=8.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
]

[format]
preview = true
extend-include = ["*.md"]
