[project]
name = "server-lecture"
version = "0.1.0"
description = "A project for server lecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torch-tb-profiler>=0.4.3",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "ruff>=0.15.12",
    "ty>=0.0.38",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "PLR", "B", "ANN"]
ignore = ["ANN201", "PLR2004", "PLR0913"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60

[tool.poe.tasks]
format = "uv run ruff format src/"
lint = "uv run ruff check --fix src/"
type-check = "uv run ty check src/"

check = ["format", "lint", "type-check"]
