[project]
name = "f-hagiwara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "diffusers==0.31.0",
    "hydra-core>=1.3.4",
    "matplotlib>=3.11.0",
    "omegaconf>=2.3.1",
    "tensorboard>=2.21.0",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
